<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.MainActivity"
    android:layout_margin="10dp"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/ic_login"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/user"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textWebPassword"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:background="@color/colorVerde"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/not_account"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_sinup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sin_up"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:background="@color/primary_light"
            android:onClick="registro"/>


</LinearLayout>