<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.RegistroActivity"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_sing"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/ic_sinup"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>


    <EditText
        android:id="@+id/edit_emailReg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edit_passReg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:inputType="textWebPassword"/>

    <Button
        android:id="@+id/btn_singReg"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sin_up"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:background="@color/colorVerde"
        android:layout_margin="25dp"/>

</LinearLayout>